navbar spacing, chat logic fix

--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ a {
   background-color: white;
   background-size: cover;
   display:inline-block;
-  margin: 20px 10px;
+  margin: 25px 10px 10px 10px;
   border-radius:5px;
   image-rendering: pixelated;
 }
